create footer section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,3 +49,50 @@ body{
 }
 /* end header */
 
+/* start footer */
+footer{
+    background-color: #EEEFF8;
+    padding: 50px 0;
+}
+.footer .row{
+    gap: 30px;
+}
+.footer a, .address-info{
+    color: #8A8FB9;
+    font-size: 14px;
+}
+.footer .left-side{
+    gap: 35px;
+    align-items: flex-start;
+    width: calc((100% - 30px) / 2);
+} 
+.footer .left-side form{
+    display: flex;
+}
+.footer .right-side{
+    width: calc((100% - 30px) / 2);
+}
+.footer .right-side .row{
+    gap: 35px;
+    align-items: flex-start;
+}
+.footer-item{
+    gap: 45px;
+    width: calc((100% - 70px) / 3);
+}
+
+@media screen and (max-width:992px){
+    .footer .left-side, .footer .right-side{
+        width: 100%;
+    }
+}
+@media screen and (max-width:576px){
+    .footer{
+        text-align: center;
+    }
+    .footer-item{
+        width: 100%;
+    }
+}
+
+/* end footer */
