--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,3 +96,94 @@ footer{
 }
 
 /* end footer */
+
+/*start featured section*/
+.featured-product{
+    padding: 50px 0;
+}
+.featured-product h2{
+    margin-bottom: 30px;
+    color: #1A0B5B;
+}
+.product{
+    position: relative;
+}
+.badge-sale{
+    position: absolute;
+    top: -4px;
+    left: -10px;
+}
+.badge-sale img{
+    width: 100px;
+}
+.featured-product .row{
+    justify-content: flex-start;
+    gap: 15px;
+}
+.featured-product .product{
+    /* flex-grow: 1;
+    flex-basis: 300px;
+    flex-shrink: 0; */
+    flex: 1 0 200px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px #00000040;
+}
+.color{
+    width: 20px;
+    height: 6px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.color-one{
+    background-color: #05E6B7;
+}
+.color-two{
+    background-color: #F701A8;
+}
+.color-three{
+    background-color: #00009D;
+    transition: all 0.6s;
+}
+.product .img{
+    background-color: #F6F7FB;
+    padding: 30px;
+    /* height: 250px; */
+}
+.product .img img{
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+}
+.product-details{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+.product-info span{
+    font-size: 14px;
+    transition: all 1s ease;
+}
+.product-details{
+    transition: all 0.4s ease;
+}
+.product-details h3{
+    font-size: 16px;
+    transition: all 0.6s;
+}
+.product:hover .product-info span{
+    color: #fff;
+}
+.product:hover .product-details{
+    background-color: #2F1AC4;
+    border-radius: 3px;
+}
+.product:hover .product-details h3{
+    color: #fff;
+}
+.product:hover .color-three{
+    background-color: #FFEAC1;
+}
+/*end featured section*/
